<resources>
    <string name="app_name">Alfred</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->


    <string name="action_settings">Settings</string>

    <string name="server_client_id">25667199244-6vrfmn6kif5psmu2p8q3t8v5q9701sat.apps.googleusercontent.com</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="action_signout">Sign Out</string>
    <string name="server_unreachable_msg">Unable to reach Apptronix Server</string>
    <string name="server_authentication_failed">Server authentication failed</string>
    <string name="g_login_failed">Google Login Failed. Check internet connection.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="base_url_default">10.50.47.245:1883</string>
    <string name="profile_picture">profile picture</string>
    <string name="date">Date</string>
    <string name="requestlogin">Please login again</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="connection_failed">Connection failed</string>
    <string name="invalid_email">enter a valid email address</string>
    <string name="password_error">between 4 and 10 alphanumeric characters</string>
    <string name="enter_valid_email">enter a valid email address</string>
    <string name="courseCodeError">You need to enter a valid course code</string>
    <string name="dateError">You need to enter a date</string>
    <string name="pick_action">Pick an Action</string>
    <string name="or">or</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="control_name">Control Name</string>
    <string name="fan">Fan</string>
    <string name="light">Light</string>
    <string name="power">Power</string>
    <string name="control_group">Control Group</string>
    <string name="control_id">Control ID</string>
</resources>
